@startuml

class ActionLog {
	{field} +action : String
	{field} +details : String
	{field} +id : Long
	{field} +login : String
	{field} +timestamp : LocalDateTime
}


enum Priority {
	{field} +CRITICAL
	{field} +HIGH
	{field} +LOW
	{field} +MEDIUM
}


enum Role {
	{field} +ROLE_ADMIN
	{field} +ROLE_ADMIN_READ
	{field} +ROLE_USER
}


class Task {
	{field} +createdAt : LocalDateTime
	{field} +description : String
	{field} +dueDate : LocalDate
	{field} +id : Long
	{field} +position : Integer
	{field} +title : String
	{method} #onCreate () : void
}


enum TaskStatus {
	{field} +CLOSED
	{field} +COMPLETED
	{field} +IN_PROGRESS
	{field} +OPEN
}


class User {
	{field} +address : String
	{field} +birthDate : LocalDate
	{field} +createdAt : LocalDateTime
	{field} +email : String
	{field} +firstName : String
	{field} +id : Long
	{field} +lastName : String
	{field} +login : String
	{field} +password : String
	{method} #onCreate () : void
}




Task -->  Priority :  @Column("priority")\npriority
Task -->  TaskStatus :  @Column("status")\nstatus
Task -->  User :  @ManyToOne\nuser
User -->  Role :  @Column("role")\nrole

hide methods

@enduml